# cathedral-assets-optimizer

./: .clang-format  .clang-tidy  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AssetsOpt_fr.ts  CMakeLists.txt  CMakePresets.json  Cathedral_Assets_Optimizer.pro  Devmodeui.cpp  Devmodeui.h  LICENSE  License_header.txt  Mainwindow.cpp  Mainwindow.h  Optimiser.cpp  Optimiser.h  Optimiser.hpp  QLogger.cpp  QLogger.h  README.md  SSE_Assets_Optimizer.pro  SSE_Assets_Optimizer.pro.user.6d0bbc2  devmodeui.cpp  devmodeui.h  devmodeui.ui  flake.nix  functions.h  functions.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  nifOpt.cpp  pch.h  vcpkg.json
CAO_backend/: .gitignore  AnimationsOptimizer.cpp  AnimationsOptimizer.h  BsaOptimizer.cpp  BsaOptimizer.h  CAO_backend.pro  CMakeLists.txt  FilesystemOperations.cpp  FilesystemOperations.h  Games.cpp  Games.h  IntegrationTests.cpp  IntegrationTests.h  Logger.h  MainOptimizer.cpp  MainOptimizer.h  Manager.cpp  Manager.h  MeshesOptimizer.cpp  MeshesOptimizer.h  OptionsCAO.cpp  OptionsCAO.h  PluginsOperations.cpp  PluginsOperations.h  TexturesOptimizer.cpp  TexturesOptimizer.h  main.cpp  pch.h
CAO_backend/QLogger/: QLogger.h
CAO_frontend/: CAO_frontend.pro  CMakeLists.txt  Custom.cpp  Custom.h  Custom.ui  FO4.cpp  FO4.h  FO4.ui  GameSelector.cpp  GameSelector.h  MainWindowte.cpp  MainWindowte.h  MainWindowte.ui  ProfileSelector.cpp  ProfileSelector.h  ProfileSelector.ui  SSE.cpp  SSE.h  SSE.ui  Skyrim.cpp  Skyrim.h  Skyrim.ui  SkyrimSE.cpp  SkyrimSE.h  SkyrimSE.ui  TES5.cpp  TES5.h  TES5.ui  UiBase.cpp  UiBase.h  UiBase.ui  main.cpp  pch.h  selectiondialog.cpp  selectiondialog.h
src/: .gitignore  AnimationsOptimizer.cpp  AnimationsOptimizer.h  AnimationsOptimizer.hpp  BSA.cpp  BSA.h  BSA.hpp  BSAMemoryCallback.hpp  BsaOptimizer.cpp  BsaOptimizer.h  BsaOptimizer.hpp  CMakeLists.txt  CMakeSettings.json  Cathedral_Assets_Optimizer.manifest  Cathedral_Assets_Optimizer.pro  Cathedral_Assets_Optimizer.rc  Cathedral_Assets_Optimizer.sln  Cathedral_Assets_Optimizer.vcxproj  Cathedral_Assets_Optimizer.vcxproj.filters  Command.cpp  Command.hpp  CommandBook.cpp  CommandBook.hpp  CommandResult.cpp  File.cpp  File.hpp  FilesystemOperations.cpp  FilesystemOperations.h  FilesystemOperations.hpp  Games.cpp  Games.h  ICommand.cpp  ICommand.hpp  IFile.cpp  IFile.hpp  IntegrationTests.cpp  IntegrationTests.h  Logger.cpp  Logger.h  Logger.hpp  (+64 more)
src/Animations/: AnimationFile.cpp  AnimationsConvert.cpp  AnimationsConvert.hpp
src/BSA/: BSA.hpp  BSAFile.cpp  BSAFile.hpp  BSAFolder.cpp  BSAFolder.hpp  BsaOptimizer.cpp
src/Commands/: Command.cpp  Command.hpp  CommandBook.cpp  CommandBook.hpp  CommandResult.cpp  CommandResult.hpp  CommandType.hpp
src/File/: File.cpp  File.hpp  FileFactory.cpp  FileFactory.hpp  Resources.hpp
src/GUI/: AdvancedAnimationsModule.cpp  AdvancedAnimationsModule.hpp  AdvancedAnimationsModule.ui  AdvancedBSAModule.cpp  AdvancedBSAModule.hpp  AdvancedBSAModule.ui  AdvancedMeshesModule.cpp  AdvancedMeshesModule.hpp  AdvancedMeshesModule.ui  AdvancedTexturesModule.cpp  AdvancedTexturesModule.hpp  AdvancedTexturesWindow.cpp  AdvancedTexturesWindow.hpp  IWindowModule.cpp  IWindowModule.hpp  IntermediateModeModule.cpp  IntermediateModeModule.hpp  IntermediateModeModule.ui  LevelSelector.cpp  LevelSelector.hpp  LevelSelector.ui  ListDialog.cpp  ListDialog.hpp  ListDialog.ui  LogWindow.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MediumModeWindow.cpp  MediumModeWindow.hpp  MediumModeWindow.ui  MeshesAdvancedWindow.cpp  MeshesAdvancedWindow.hpp  MeshesAdvancedWindow.ui  PatternsManagerWindow.cpp  PatternsManagerWindow.hpp  PatternsManagerWindow.ui  ProfilesManagerWindow.cpp  ProfilesManagerWindow.hpp  ProfilesManagerWindow.ui  (+16 more)
src/Meshes/: MeshFile.cpp  MeshFile.hpp
src/NifLib/: Original_repo.txt
src/Plugins/: PluginsOperations.cpp  PluginsOperations.hpp
src/QLogger/: QLogger.cpp
src/Settings/: AdvancedSettings.cpp  AdvancedSettings.hpp  BaseTypes.hpp  CommonSettings.hpp  FileTypes.cpp  FileTypes.hpp  Games.cpp  Games.hpp  GeneralSettings.cpp  GeneralSettings.hpp  JSON.cpp  JSON.hpp  MigrateProfiles.cpp  MigrateProfiles.hpp  PatternMap.cpp  PatternMap.hpp  PatternSettings.cpp  PatternSettings.hpp  Profile.cpp  Profile.hpp  Profiles.cpp  Profiles.hpp  Settings.cpp  Settings.hpp  StandardSettings.hpp  UISync.cpp  UISync.hpp
src/Textures/: Texture.hpp  TextureConvert.cpp  TextureConvert.hpp  TextureDecompress.cpp  TextureDecompress.hpp  TextureFile.cpp  TextureFile.hpp  TextureGenerateMipmaps.cpp  TextureGenerateMipmaps.hpp  TextureResize.cpp  TextureResize.hpp  TexturesOptimizer.cpp  TexturesOptimizer.hpp
src/Utils/: Algorithms.hpp  CallOnce.cpp  CallOnce.hpp  Filesystem.cpp  Filesystem.hpp  ModFolder.cpp  ScopeGuard.hpp  TemplateMetaProgramming.hpp  TypeConvert.hpp  wildcards.hpp
src/gui/: AdvancedAnimationsModule.cpp  AdvancedAnimationsModule.hpp  AdvancedBSAModule.cpp  AdvancedBSAModule.hpp  AdvancedBSAModule.ui  AdvancedMeshesModule.cpp  AdvancedMeshesModule.hpp  AdvancedMeshesModule.ui  AdvancedTexturesModule.cpp  AdvancedTexturesModule.hpp  AdvancedTexturesModule.ui  GeneralBSAModule.cpp  GeneralBSAModule.hpp  GeneralBSAModule.ui  IWindowModule.cpp  IWindowModule.hpp  IntermediateModeModule.cpp  IntermediateModeModule.hpp  LevelSelector.cpp  LevelSelector.hpp  LevelSelector.ui  ListDialog.cpp  ListDialog.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  ModuleDisplay.cpp  ModuleDisplay.hpp  PatternsManagerWindow.cpp  PatternsManagerWindow.hpp  PatternsManagerWindow.ui  ProfilesManagerWindow.cpp  ProfilesManagerWindow.hpp  ProfilesManagerWindow.ui  ProgressWindow.cpp  ProgressWindow.hpp  ProgressWindow.ui  SelectGPUWindow.cpp  SelectGPUWindow.hpp
src/libbsarch/: BSArchive.h  BSArchiveAuto.cpp  BSArchiveEntries.cpp  QLibbsarch.h
src/settings/: FileTypes.cpp  GeneralSettings.cpp  JSON.cpp  JSON.hpp  PatternMap.cpp  PatternMap.hpp  PatternSettings.cpp  Profile.cpp  base_types.hpp  json.hpp  per_file_settings.hpp  profile.cpp  profile.hpp  settings.cpp  settings.hpp
(+522 files in other folders)
